[gd_scene load_steps=7 format=3 uid="uid://de3t5875vnq06"]

[ext_resource type="Script" path="res://ui/world_canvas.gd" id="1_j34pu"]
[ext_resource type="Theme" uid="uid://imx8kyejr8tk" path="res://assets/themes/new_theme.tres" id="2_bejyt"]
[ext_resource type="PackedScene" uid="uid://bc41tcvb43v6k" path="res://ui/menus/game_menu.tscn" id="3_htom4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtkji"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.588235)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xphg3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7oy7j"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.588235)

[node name="WorldCanvas" type="CanvasLayer"]
script = ExtResource("1_j34pu")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bejyt")
theme_override_constants/separation = 2

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gtkji")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/StatusBar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StatusBar/MarginContainer"]
layout_mode = 2

[node name="TileStatus" type="Label" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseUI" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 2.08165e-12)
layout_mode = 2
text = "X"

[node name="UnitList" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(108, 2.08165e-12)
layout_mode = 2
text = "Unit List"

[node name="Next" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(108, 2.08165e-12)
layout_mode = 2
text = "Next"

[node name="ZoomIn" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 2.08165e-12)
layout_mode = 2
text = "+"

[node name="ZoomOut" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 2.08165e-12)
layout_mode = 2
text = "-"

[node name="Menu" type="Button" parent="VBoxContainer/StatusBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(108, 2.08165e-12)
layout_mode = 2
text = "Menu"

[node name="MenuContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xphg3")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panels" type="HBoxContainer" parent="VBoxContainer/MenuContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="GameMenu" parent="VBoxContainer/MenuContainer/MarginContainer/Panels" instance=ExtResource("3_htom4")]
unique_name_in_owner = true
layout_mode = 2

[node name="Status" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7oy7j")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Status"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Status/MarginContainer"]
layout_mode = 2

[node name="StatusInformation" type="Label" parent="VBoxContainer/Status/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Conquest of the New Realm"

[node name="EndTurn" type="Button" parent="VBoxContainer/Status/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(108, 2.08165e-12)
layout_mode = 2
text = "End Turn"
